--- a/example/src/App.css
+++ b/example/src/App.css
@@ -19,14 +19,14 @@ span{
 code { background-color: #eee; }
 
 .App-logo {
-  height: 100px;
+  height: 50px;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 150px;
+  /*min-height: 150px;*/
   display: flex;
-  flex-direction: column;
+  /*flex-direction: column;*/
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
